--- a/index.html
+++ b/index.html
@@ -4,44 +4,60 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
 
+  <!-- Google font -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Hanken+Grotesk:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+
+  <!-- CSS sheet -->
+  <link rel="stylesheet" href="./index.css">
+
   <link rel="icon" type="image/png" sizes="32x32" href="./assets/images/favicon-32x32.png">
   
   <title>Frontend Mentor | Results summary component</title>
-
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
 </head>
 <body>
 
-  Your Result
-  76
-  of 100
-
-  Great
-  You scored higher than 65% of the people who have taken these tests.
-  
-  Summary
-
-  Reaction
-  80 / 100
-
-  Memory
-  92 / 100
-
-  Verbal
-  61 / 100
-
-  Visual
-  72 / 100
-
-  Continue
+  <main>
+    <div class="summary-container">
+      <div>
+        <h1>Your Result</h1>
+        <h2>76 of 100</h2>
+        <p>Great</p>
+        <p>You scored higher than 65% of the people who have taken these tests.</p>
+      </div>
+      <div>
+        <h3>Summary</h3>
+        <ul>
+          <li>
+            <img src="./assets/images/icon-reaction.svg">
+            <p>Reaction</p>
+            <p>80 / 100</p>
+          </li>
+          <li>
+            <img src="./assets/images/icon-memory.svg">
+            <p>Memory</p>
+            <p>92 / 100</p>
+          </li>
+          <li>
+            <img src="./assets/images/icon-verbal.svg">
+            <p>Verbal</p>
+            <p>61 / 100</p>
+          </li>
+          <li>
+            <img src="./assets/images/icon-visual.svg">
+            <p>Visual</p>
+            <p>72 / 100</p>
+          </li>
+        </ul>
+        <button>Continue</button>
+      </div>
+    </div>
+  </main>
   
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
+    Coded by <a href="#">Gemma Taylor</a>.
   </div>
 </body>
 </html>
