--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
   </main>
   <footer>
     <div class="attribution">
-      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
+      Challenge by <a href="https://www.frontendmentor.io/challenges/results-summary-component-CE_K6s0maV" target="_blank">Frontend Mentor</a>. 
       Coded by <a href="https://github.com/GemTay">Gemma Taylor</a>.
     </div>
   </footer>
